assignment3/app-2-svc.yaml
#app-2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-2
spec:
  selector:
    run: app-2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
  type: ClusterIP
