assignment3/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx   # Select pods with the label "app: nginx"
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
