assignment3/app-2-ingress.yaml
#app-2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-2-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"
spec:
  rules:
  - http:
      paths:
      - path: /app-2
        pathType: Prefix
        backend:
          service:
            name: app-2-service
            port:
              number: 3000
